--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ main {
   cursor: pointer;
 }
 
+.btn:active {
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.342);
+}
+
 .hidden {
   display: none;
 }
